[package]
name = "isolayer"
version = "0.1.0"
edition = "2021"
author = ["Anthony Young"]
description = """
An automated, safety-first thermal barrier that prevents condensation and maintains 
radiant warmth in mobile structures (vans, tents, cars). Isolayer intelligently reacts 
to environmental data to maintain a protective "thermal envelope" while strictly safeguarding 
limited off-grid power resources.
"""

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
