[package]
name = "isolayer"
version = "0.1.0"
edition = "2021"
author = ["Anthony Young"]
description = """
An automated, safety-first thermal barrier that prevents condensation and maintains 
radiant warmth in mobile structures (vans, tents, cars). Isolayer intelligently reacts 
to environmental data to maintain a protective "thermal envelope" while strictly safeguarding 
limited off-grid power resources.
"""

[dependencies]
anyhow = "1.0.101"
ctrlc = "3.5.1"
notify = "8.2.0"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
